2006-07-03  KHill  <fuzzballz@comcast.net>

	* 

2006-07-03  KHill  <fuzzballz@comcast.net>

	* include/hamlib/rig.h  changed settings_t and rig_idx2setting from long (32 bit words)
	to long long (64 bit).  The RIG_SETTING_MAX is set to 64.  This caused errors multiple
	bits of code tried to access the upper 32 bits.  Maybe RIG_SETTING_MAX should be 
	changed to 32?

	* Icom/frame.c Changed passband mode to reflect the majority of modern rigs and all the old ones I 
	could find the command documentation for.  Change char buffer defs so the are consistant.


2006-06-29  KHill  <fuzzballz@comcast.net>

	* icom/icom.c numerous fixes and updates.  get_ptt, removing unused code and 
	structures, functions fagc, fbkin, sbkin fixed and vsc (voice squelch added).   
	tone set for  ctcss fixed, scan fixed.

	* include/hamlib/rig.h rig_func_rnf  (rtty notch filter) renamed to rig_func_rf (rty filter). It is miss-named.
	It is so far only implemented with Icom.  It is not a notch filter it is a series of
	predfined filters for rtty mode.  filter mode needs more work.

	* icom/ic746 updated and corrected lots of bugs added parameters and get channels
	these still need lot of work.  Could probably generalize the parameters for all the newer
	rigs.


2003-04-28 08:34  fillods

	* INSTALL, NEWS, README, README.developer: updates before release

2003-04-28 00:15  fillods

	* include/hamlib/rig.h, src/rig.c: doxygen fixes

2003-04-28 00:14  fillods

	* include/hamlib/rotator.h: added ROT_RESET_ALL

2003-04-26 11:54  fillods

	* icom/: frame.c, frame.h, icom.c, os456.c: OS456 has no passband
	data in set_mode/get_mode

2003-04-24 00:17  fillods

	* bindings/Makefile.am: VPATH build fix, tcl build fix

2003-04-24 00:15  fillods

	* configure.ac: re-enable c++ binding, fix tcl build, bindings
	build requires perl *and* tcl

2003-04-23 23:06  fillods

	* src/rotator.c: typo

2003-04-23 23:05  fillods

	* rpcrig/Makefile.am, rpcrot/Makefile.am: Tell rpcgen to generate