@@ -1,6 +1,8 @@
-2006-07-03  KHill  <fuzzballz@comcast.net>
+2006-07-30  AD7AI <fuzzballz@comcast.net>
 
-	* 
+	*  RIG_SETTING_MAX changed back to 32 and rigctl and rigmatrix corrected to reflect 32
+	    bit words per readme.developer.  Rigmatrix could use a little more testing, but seems to
+	    work ok.
 
 2006-07-03  KHill  <fuzzballz@comcast.net>
 
